hphp/hack/test/typecheck/is_expression/this.php.like_types.exp
File "this.php", line 4, characters 31-35:
Invalid argument (Typing[4110])
File "this.php", line 9, characters 7-12:
Expected ~this
File "this.php", line 4, characters 31-35:
But got null
File "this.php", line 4, characters 31-35:
Invalid argument (Typing[4110])
File "this.php", line 9, characters 7-12:
Expected ~this
File "this.php", line 4, characters 31-35:
But got nonnull
File "this.php", line 4, characters 31-35:
Invalid argument (Typing[4110])
File "this.php", line 10, characters 7-10:
Expected ~this
File "this.php", line 4, characters 31-35:
But got null
File "this.php", line 4, characters 31-35:
Invalid argument (Typing[4110])
File "this.php", line 10, characters 7-10:
Expected ~this
File "this.php", line 4, characters 31-35:
But got nonnull
